--- a/cercavoli/master/cercavoli.master
+++ b/cercavoli/master/cercavoli.master
@@ -68,7 +68,7 @@
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> 
     <script type="text/javascript" src="js/jquery.ui.datepicker-it.js"></script>
     <script type="text/javascript" src="http://malsup.github.io/jquery.corner.js"></script>
-    <script type="text/javascript" src="js/cercavoli.js?id=1"></script>
+    <asp:contentplaceholder id="Scripts" runat="server" />
     <script type="text/javascript" src="../slide.js?id=1"></script>
 </body>
 </html>
